[gd_scene load_steps=2 format=3 uid="uid://dhxs08pidwfoo"]

[ext_resource type="Script" path="res://addons/netpunk.gametools/subsystems/setting_builder/settings_group.gd" id="1_ggq4n"]

[node name="SettingsGroup" type="PanelContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 70.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_ggq4n")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EditableTitle" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Settings Group Name"
expand_to_text_length = true

[node name="Title" type="RichTextLabel" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
fit_content = true
autowrap_mode = 0

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MenuButton" type="MenuButton" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "..."
item_count = 1
popup/item_0/text = "Delete Group"
popup/item_0/id = 0

[node name="SettingsContents" type="VBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="AddButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "+ Setting"

[connection signal="text_changed" from="VBoxContainer/HBoxContainer/EditableTitle" to="." method="_on_editable_title_text_changed"]
[connection signal="pressed" from="VBoxContainer/AddButton" to="." method="_on_add_button_pressed"]
